--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,12 +5,12 @@
   </div>
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
-      <li><a href="#">Recipes</a></li>
-      <li><a href="#">Shopping list</a></li>
+      <li><a href="#" (click)="onSelect('recipes')">Recipes</a></li>
+      <li><a href="#" (click)="onSelect('Shopping')">Shopping list</a></li>
 
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li class="dropdown">
+      <li class="dropdown" appDropdown>
         <a href="#" role="button" class="dropdown-toggle">Manage<span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Save data</a></li>
