--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -1,3 +1,30 @@
-<p>
-  recipe-details works!
-</p>
+<div class="row">
+<div class="co-md-12">
+  <img src="{{selectedRecipeDetails.imagePath}}" alt="" class="img-responsive" />
+</div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    {{selectedRecipeDetails.name}}
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <div class="btn-group" appDropdown>
+     <button type="button" class="btn btn-primary dropdown-toggle">
+      Manage Recipes
+      <span class="caret"></span>
+     </button>
+     <ul class="dropdown-menu">
+       <li><a href="#">To Shopping List</a></li>
+       <li><a href="#">Edit Shopping</a></li>
+       <li><a href="#">Dekete Shopping</a></li>
+     </ul>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    {{selectedRecipeDetails.description}}}
+  </div>
+</div>
