--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-md-12">
-        <button class="btn btn-success">
+        <button class="btn btn-success" (click)="onNewRecipe()">
             New recipe
         </button>
     </div>
 </div>
 
-<hr>
+<hr>    
 
-<app-recipe-item *ngFor="let rec of recipes" [recipe]="rec" ></app-recipe-item>
+<app-recipe-item *ngFor="let rec of recipes;let i=index" [recipe]="rec" [selectedIndex]="i" ></app-recipe-item>
