--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,9 @@
 
   <div class="row">
     <div class="col-md-12">
-      <app-recipes *ngIf="loadedFeature==='recipes'"></app-recipes>
-      <app-shopping-list *ngIf="loadedFeature==='Shopping'"></app-shopping-list>
+      <router-outlet></router-outlet>
+      <!-- <app-recipes *ngIf="loadedFeature==='recipes'"></app-recipes>
+      <app-shopping-list *ngIf="loadedFeature==='Shopping'"></app-shopping-list> -->
     </div>
   </div>
 </div> 
