--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -1,7 +1,7 @@
 <div class="row">
-<div class="co-md-12">
-  <img src="{{selectedRecipeDetails.imagePath}}" alt="" class="img-responsive" />
-</div>
+  <div class="co-md-12">
+    <img src="{{selectedRecipeDetails.imagePath}}" alt="" class="img-responsive" />
+  </div>
 </div>
 <div class="row">
   <div class="col-md-12">
@@ -11,15 +11,21 @@
 <div class="row">
   <div class="col-md-12">
     <div class="btn-group" appDropdown>
-     <button type="button" class="btn btn-primary dropdown-toggle">
-      Manage Recipes
-      <span class="caret"></span>
-     </button>
-     <ul class="dropdown-menu">
-       <li><a href="#">To Shopping List</a></li>
-       <li><a href="#">Edit Shopping</a></li>
-       <li><a href="#">Dekete Shopping</a></li>
-     </ul>
+      <button type="button" class="btn btn-primary dropdown-toggle">
+        Manage Recipes
+        <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li>
+          <a style="cursor:pointer;" (click)="addIngredients()"  >To Shopping List</a>
+        </li>
+        <li>
+          <a style="cursor:pointer;" (click)="editShopping()">Edit Shopping</a>
+        </li>
+        <li>
+          <a style="cursor:pointer;">Delete Shopping</a>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
@@ -27,4 +33,15 @@
   <div class="col-md-12">
     {{selectedRecipeDetails.description}}}
   </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of selectedRecipeDetails.ingredients">
+        {{ingredient.name}}-({{ingredient.amount}})
+      </li>
+
+    </ul>
+  </div>
+
 </div>
