--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-      <a href="#" class="list-group-item clearfix" (click)="showDetails()" >
+      <a style="cursor:pointer;" [routerLink]="[selectedIndex]"  routerLinkActive="active"  class="list-group-item clearfix"   >
           <div class="pull-left">
               <h4 class="list-group-item-heading">{{recipe.name}}</h4>
               <p class="list-group-item-text">{{recipe.description}}</p>
