--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,10 +3,11 @@
 <app-recipe-list></app-recipe-list>
 </div>
 <div class="col-md-7">
-  <app-recipe-details *ngIf="selectedRecipe;else selectRecipe" [selectedRecipeDetails]="selectedRecipe" >
+  <router-outlet></router-outlet>
+  <!-- <app-recipe-details *ngIf="selectedRecipe;else selectRecipe" [selectedRecipeDetails]="selectedRecipe" >
       </app-recipe-details>
       <ng-template #selectRecipe>
         <p>Please Select a recipe</p>
-      </ng-template>
+      </ng-template> -->
 </div>
 </div>
