--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,23 +1,26 @@
 <div class="row">
   <div class="col-md-12">
-    <form>
+    <form (ngSubmit)="onAddItem(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">
             Name
           </label>
-          <input type="text" id="name" class="form-control" #nameInput>
+          <input type="text" required id="name" name="name" ngModel class="form-control" #nameInput="ngModel">
+          <span class="help-block" *ngIf="!nameInput.valid && nameInput.touched">This field is required</span>
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number"  id="amount" class="form-control" #amountInput>
+          <input type="number" id="amount" name="amount" pattern="^[1-9]+[0-9]*$" ngModel class="form-control" #amountInput="ngModel"
+            required>
+          <span class="help-block" *ngIf="!amountInput.valid && amountInput.touched">This field is required</span>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success" (click)="onAddItem()">Add</button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button type="submit" class="btn btn-success" type="submit" [disabled]="!f.valid">{{editFlag?'Update':'Add'}}</button>
+          <button class="btn btn-danger" *ngIf="editFlag" type="button" (click)="onDelete()">Delete</button>
+          <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
         </div>
       </div>
     </form>
