--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-xs-10">
 
-<!-- <app-shopping-edit (ingredientAdded)="addIngredient($event)" ></app-shopping-edit> -->
-<app-shopping-edit></app-shopping-edit>
+    <!-- <app-shopping-edit (ingredientAdded)="addIngredient($event)" ></app-shopping-edit> -->
+    <app-shopping-edit></app-shopping-edit>
 
-<ul class="list-group">
-  <a class="list-group-item" style="cursor:pointer" *ngFor="let ing of ingredients">{{ing.name}} ({{ing.amount}})</a>
-</ul>
-</div>
+    <ul class="list-group">
+      <a class="list-group-item" style="cursor:pointer" *ngFor="let ing of ingredients;let i=index" (click)="onEdit(i)" >{{ing.name}} ({{ing.amount}})</a>
+    </ul>
+  </div>
 </div>
