addedRecipe-edit with reactiveapproach

--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -31,7 +31,7 @@
 </div>
 <div class="row">
   <div class="col-md-12">
-    {{selectedRecipeDetails.description}}}
+    {{selectedRecipeDetails.description}}
   </div>
 </div>
 <div class="row">
