--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,3 +1,37 @@
-<p>
-  recipe-edit works!
-</p>
+<div class="col-md-12 col-xs-12">
+  <form (ngSubmit)="saveRecipe()" [formGroup]="recipeForm" >
+    <div class="row" style="margin-bottom:15px">
+      <button type="submit" class="btn btn-success">Save</button>
+      <button type="button" class="btn btn-danger">Cancel</button>
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" formControlName="name" id="name" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="imagePath">imagePath</label>
+        <input type="text" formControlName="imagePath" id="imagePath" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="description">description</label>
+        <textarea id="description" formControlName="description" class="form-control" rows="5"></textarea>
+      </div>
+      <div formArrayName="ingredients">
+        <div class="row" [formGroupName]="i" *ngFor="let ingr of recipeForm.get('ingredients').controls;let i=index">
+          <div class="col-xs-8">
+            <input type="text" formControlName="name">
+          </div>
+          <div class="col-xs-2">
+            <input type="number"  formControlName="amount">
+          </div>
+          <div class="col-xs-2">
+            <button type="button" class="btn btn-danger">X</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </form>
+</div>
