saving recipes to the firebase backend

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,10 +21,10 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a style="cursor:pointer;">Save data</a>
+              <a style="cursor:pointer;"(click)="storeRecipes()" >Save data</a>
             </li>
             <li>
-              <a style="cursor:pointer;">Fetch data</a>
+              <a style="cursor:pointer;" (click)="fetchRecipes()">Fetch data</a>
             </li>
           </ul>
         </li>
