--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -20,10 +20,10 @@
           <a style="cursor:pointer;" (click)="addIngredients()"  >To Shopping List</a>
         </li>
         <li>
-          <a style="cursor:pointer;" (click)="editShopping()">Edit Shopping</a>
+          <a style="cursor:pointer;" (click)="editShopping()">Edit Recipe</a>
         </li>
         <li>
-          <a style="cursor:pointer;">Delete Shopping</a>
+          <a style="cursor:pointer;" (click)="deleteRecipe()">Delete Recipe</a>
         </li>
       </ul>
     </div>
