--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -2,7 +2,7 @@
   <form (ngSubmit)="saveRecipe()" [formGroup]="recipeForm" >
     <div class="row" style="margin-bottom:15px">
       <button type="submit" class="btn btn-success">Save</button>
-      <button type="button" class="btn btn-danger">Cancel</button>
+      <button type="button" (click)="cancelChanges()" class="btn btn-danger">Cancel</button>
     </div>
     <div class="row">
       <div class="form-group">
@@ -17,19 +17,24 @@
         <label for="description">description</label>
         <textarea id="description" formControlName="description" class="form-control" rows="5"></textarea>
       </div>
+      <div class="form-group">
+        <img [src]="recipeForm.get('imagePath').value"  class="img-responsive" alt="Unable to load">
+      </div>
       <div formArrayName="ingredients">
         <div class="row" [formGroupName]="i" *ngFor="let ingr of recipeForm.get('ingredients').controls;let i=index">
-          <div class="col-xs-8">
-            <input type="text" formControlName="name">
+          <div class="col-xs-4" >
+            <input type="text"  formControlName="name">
+            <span *ngIf="recipeForm.get('ingredients').controls[i].get('name').errors?.required">This value is required</span>
           </div>
-          <div class="col-xs-2">
+          <div class="col-xs-4" >
             <input type="number"  formControlName="amount">
           </div>
-          <div class="col-xs-2">
-            <button type="button" class="btn btn-danger">X</button>
+          <div class="col-xs-4">
+            <button type="button" (click)="removeIngredient(i)" class="btn btn-danger">X</button>
           </div>
         </div>
       </div>
+      <button class="btn btn-primary" type="button" (click)="addNewIngredient()">Add Ingredient</button>
     </div>
 
 
