added authentication using firebase

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,12 +14,21 @@
           <a routerLink="/shoppinglist">Shopping List</a>
         </li>
       </ul>
+      
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
+        <!--internally ngIf works without the asterik *ngIf is a shortcut to evaluate DOM elements based on the value of the component but for multiple elements we have to use this [ngIf]-->
+        <ng-template [ngIf]="!authService.isAuthenticated()"> 
+        <li><a [routerLink]="['signup']">Register</a></li>
+        <li><a [routerLink]="['signIn']">Login</a></li>
+      </ng-template>
+        <li class="dropdown" *ngIf="authService.isAuthenticated()" appDropdown>
           <a style="cursor:pointer;" role="button" class="dropdown-toggle">Manage
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
+              <li>
+                  <a style="cursor:pointer;"(click)="logout()" >Logout</a>
+                </li>
             <li>
               <a style="cursor:pointer;"(click)="storeRecipes()" >Save data</a>
             </li>
