--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -5,7 +5,7 @@
     <app-shopping-edit></app-shopping-edit>
 
     <ul class="list-group">
-      <a class="list-group-item" style="cursor:pointer" *ngFor="let ing of ingredients;let i=index" (click)="onEdit(i)" >{{ing.name}} ({{ing.amount}})</a>
+      <a class="list-group-item" style="cursor:pointer" *ngFor="let ing of (shoppingListState|async).ingredients;let i=index" (click)="onEdit(i)" >{{ing.name}} ({{ing.amount}})</a>
     </ul>
   </div>
 </div>
